--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           jupyter lite build --contents content --output-dir dist --pyodide pyodide.tar.bz2
           python utils.py patch
+          cp -f patch/568.01d8de54f0240b4168bd.js dist/extensions/jupyterlab-open-url-parameter/static/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
